# hgedc

./: .gitignore  README.md
HGCCPP/: CMakeLists.txt  ReadMe.md
HGCCPP/hgc/: CMakeLists.txt
HGCCPP/hgc/src/: CMakeLists.txt  HGCCosts.hpp  HGCGED.cpp  HGCGED.h  UserDefined.hpp
HGCCPP/hgc/tests/: CMakeLists.txt  test_executable.cpp  test_gedlib.cpp  test_pybind.cpp  test_pybind.h  test_pybind.py
HGCCPP/scripts/: build.sh  clean.sh  copy.sh  do.sh  execute.sh  testecute.sh
HGCPY/deprecated/scripts/: call_run_on_dataset.sh
HGCPY/deprecated/src/: run_on_dataset.py  test.py
HGCPY/src/: call_main.sh  edit_costs.py  glnx_parser.py  hgc_env.py  main.py  test.py
